uploaded th first version of the 1st page HTML and CSS files

--- a/task1 (X-O)/index.html
+++ b/task1 (X-O)/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-  
+<div class="maindiv">
+  <div class="game-title">
+    <div class="x">X</div>
+    <div class="o">O</div>
+    <div class="game-word">GAME</div>
+  </div>
+  <a href="index2.html" class="button">Start</a>
+</div>
 </body>
 </html>
