made some changes in the css and html files

--- a/task2/design.html
+++ b/task2/design.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loopstudios</title>
     <link rel="stylesheet" href="design.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-- First Main Div -->
-<div class="maindiv1">
-    <div class="div1sub1">
-        <p class="logo">loopstudios</p>
-        <div class="info">
+<div class="main-div1">
+    <div>
+        <h1>loopstudios</h1> <!-- شيلت الكلاس وعملته بالفيرست تشايلد في السطر 37 -->
+        <div>
             <p>About</p>
             <p>Careers</p>
             <p>Events</p>
@@ -19,14 +22,14 @@
             <p>Support</p>
         </div>
     </div>
-    <div class="div1sub2">
-        <p class="headline">IMMERSIVE<br>EXPERIENCES<br>THAT DELIVER</p>
+    <div>
+        <p>IMMERSIVE<br>EXPERIENCES<br>THAT DELIVER</p>
     </div>
 </div>
 
 <!-- Second Main Div -->
-<div class="maindiv2">
-    <div class="text-container">
+<div class="main-div2">
+    <div> <!-- .text-container -->
         <h2>THE LEADER IN<br>INTERACTIVE VR</h2>
         <p>
             Founded in 2011, Loopstudios has been producing world-class
@@ -35,7 +38,7 @@
             through digital experiences that bind to their brand.
         </p>
     </div>
-    <div class="image-container">
+    <div>
         <img src="image-interactive.jpg" alt="Interactive VR">
     </div>
 </div>
