made some changes in the css and html files

--- a/task2/design.html
+++ b/task2/design.html
@@ -13,7 +13,7 @@
 <!-- First Main Div -->
 <div class="main-div1">
     <div>
-        <h1>loopstudios</h1> <!-- شيلت الكلاس وعملته بالفيرست تشايلد في السطر 37 -->
+        <h1>loopstudios</h1>
         <div>
             <p>About</p>
             <p>Careers</p>
