--- a/task1 (X-O)/Design1.html
+++ b/task1 (X-O)/Design1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="Design%201.css">
 </head>
 <body>
     <div class="maindiv">
@@ -58,6 +58,6 @@
     <a href="" class="button" id="btn-new">New Game</a>
 
 </div>
-<script src="script.js"></script>
+<script src="Design1.js"></script>
 </body>
 </html>
