made some changes in design2 css

--- a/task2/Design2.html
+++ b/task2/Design2.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div>
-        <p>IMMERSIVE<br>EXPERIENCES<br>THAT DELIVER</p>
+        <p>immersive<br>experiences<br>that deliver</p>
     </div>
 </div>
 
