--- a/task1 (X-O)/Design1.html
+++ b/task1 (X-O)/Design1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap">
-    <link rel="stylesheet" href="Design%201.css">
+    <link rel="stylesheet" href="Design1.css">
 </head>
 <body>
     <div class="maindiv">
