Second half of task2 uploaded

--- a/task2/Design2.html
+++ b/task2/Design2.html
@@ -42,5 +42,72 @@
         <img src="image-interactive.jpg" alt="Interactive VR">
     </div>
 </div>
+<div class="home">
+    <div class="grid-title">
+      <h2>OUR CREATIONS</h2>
+      <button>SEE ALL</button>
+    </div>
+    
+    <div class="grid-container">
+      <div class="grid-item">
+        <img src="img/image-deep-earth.jpg">
+        <h3>DEEP<br>EARTH</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-night-arcade.jpg">
+        <h3>NIGHT<br>ARCADE</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-soccer-team.jpg">
+        <h3>SOCCER<br>TEAM VR</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-grid.jpg">
+        <h3>THE<br>GRID</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-from-above.jpg">
+        <h3>FROM UP<br>ABOVE VR</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-pocket-borealis.jpg">
+        <h3>POCKET<br>BOREALIS</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-curiosity.jpg">
+        <h3>THE<br>CURIOSITY</h3>
+      </div>
+      <div class="grid-item">
+        <img src="img/image-fisheye.jpg">
+        <h3>MAKE IT<br>FISHEYE</h3>
+      </div>
+    </div>
+    <button class="unique">SEE ALL</button>
+
+  </div>
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer-left">
+      <div class="logo">loopstudios</div>
+      <div class="footer-links">
+        <a href="#">About</a>
+        <a href="#">Careers</a>
+        <a href="#">Events</a>
+        <a href="#">Products</a>
+        <a href="#">Support</a>
+      </div>
+    </div>
+    
+    <div class="footer-right">
+      <div class="social-icons">
+        <a href="#"><img src="extra/icon-facebook.svg" ></a>
+        <a href="#"><img src="extra/icon-twitter.svg" ></a>
+        <a href="#"><img src="extra/icon-pinterest.svg" ></a>
+        <a href="#"><img src="extra/icon-instagram.svg" ></a>
+      </div>
+      <p class="copyright">© 2024 Loopstudios. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 </html>
